tests/ui/resolve/fresh-should-shadow-definitation-in-macro-expand-in-block.stderr
error[E0425]: cannot find function `f` in this scope
  --> $DIR/fresh-should-shadow-definitation-in-macro-expand-in-block.rs:36:29
   |
LL |         let a0: BindingF = m!();
   |                            ---- in this macro invocation
...
LL |     macro_rules! m {() => ( f() )}
   |                             ^ not found in this scope
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `f` in this scope
  --> $DIR/fresh-should-shadow-definitation-in-macro-expand-in-block.rs:62:29
   |
LL |         let a0: BindingF = m!();
   |                            ---- in this macro invocation
...
LL |     macro_rules! m {() => ( f() )}
   |                             ^ not found in this scope
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `f` in this scope
  --> $DIR/fresh-should-shadow-definitation-in-macro-expand-in-block.rs:84:29
   |
LL |         let a0: BindingF = m!();
   |                            ---- in this macro invocation
...
LL |     macro_rules! m {() => ( f() )}
   |                             ^ not found in this scope
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `f` in this scope
  --> $DIR/fresh-should-shadow-definitation-in-macro-expand-in-block.rs:84:29
   |
LL |         let a1: BindingF = m!();
   |                            ---- in this macro invocation
...
LL |     macro_rules! m {() => ( f() )}
   |                             ^ not found in this scope
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0425`.
